# controllers/users/avatarController.js
@@ -3,6 +3,7 @@ const { HTTPCodes } = require('../../helpers')
 
 const avatarController = async (req, res, next) => {
   const updatedUser = await avatar(req.user, req.file)
+  console.log(req.file)
 
   return res.status(HTTPCodes.OK).json({
     avatarURL: updatedUser.avatarURL,
