# swagger.json
@@ -205,7 +205,7 @@
     "/users/avatars": {
       "patch": {
         "tags": ["Users"],
-        "summary": "User data",
+        "summary": "User avatar",
         "parameters": [],
         "security": [{ "Bearer": [] }],
         "requestBody": {
@@ -282,7 +282,7 @@
         "summary": "User data",
         "parameters": [
           {
-            "in": "query",
+            "in": "path",
             "required": true,
             "type": "string",
             "description": "verificationToken",
@@ -721,7 +721,7 @@
       "AvatarRequest": {
         "type": "object",
         "properties": {
-          "file": {
+          "avatar": {
             "type": "array",
             "items": {
               "type": "string",
@@ -1053,7 +1053,6 @@
           }
         }
       }
-
     },
 
     "securitySchemes": {
